// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FailureInstancePanelControlTest render FailureInstancePanelControl: add instance 1`] = `
<React.Fragment>
  <CustomizedActionButton
    ariaDescription="Open add a failure instance panel"
    ariaLabel="Add a failure instance"
    iconProps={
      Object {
        "iconName": "Add",
      }
    }
    onClick={[Function]}
  >
    Add a failure instance
  </CustomizedActionButton>
  <GenericPanel
    className="failure-instance-panel"
    closeButtonAriaLabel={null}
    hasCloseButton={false}
    isOpen={false}
    onDismiss={[Function]}
    title="Add a failure instance"
  >
    <FlaggedComponent
      enableJSXElement={
        <FailureInstancePanelDetails
          onSelectorChange={[Function]}
          onValidateSelector={[Function]}
          path=""
          snippet=""
        />
      }
      featureFlag="manualInstanceDetails"
      featureFlagStoreData={Object {}}
    />
    <StyledTextFieldBase
      className="observed-failure-textfield"
      label="Comments"
      multiline={true}
      onChange={[Function]}
      resizable={false}
      rows={8}
      value=""
    />
    <ActionAndCancelButtonsComponent
      cancelButtonOnClick={[Function]}
      isHidden={false}
      primaryButtonDisabled={true}
      primaryButtonOnClick={[Function]}
      primaryButtonText="Add"
    />
  </GenericPanel>
</React.Fragment>
`;

exports[`FailureInstancePanelControlTest render FailureInstancePanelControl: edit instance 1`] = `
<React.Fragment>
  <StyledLinkBase
    className="edit-button"
    onClick={[Function]}
  >
    <StyledIconBase
      ariaLabel="edit instance"
      iconName="edit"
    />
  </StyledLinkBase>
  <GenericPanel
    className="failure-instance-panel"
    closeButtonAriaLabel={null}
    hasCloseButton={false}
    isOpen={false}
    onDismiss={[Function]}
    title="Edit failure instance"
  >
    <FlaggedComponent
      enableJSXElement={
        <FailureInstancePanelDetails
          onSelectorChange={[Function]}
          onValidateSelector={[Function]}
          path=""
          snippet=""
        />
      }
      featureFlag="manualInstanceDetails"
      featureFlagStoreData={Object {}}
    />
    <StyledTextFieldBase
      className="observed-failure-textfield"
      label="Comments"
      multiline={true}
      onChange={[Function]}
      resizable={false}
      rows={8}
      value=""
    />
    <ActionAndCancelButtonsComponent
      cancelButtonOnClick={[Function]}
      isHidden={false}
      primaryButtonDisabled={true}
      primaryButtonOnClick={[Function]}
      primaryButtonText="Save"
    />
  </GenericPanel>
</React.Fragment>
`;
